--- a/searcher.html
+++ b/searcher.html
@@ -25,7 +25,7 @@
 <body>
     <page class="page">
         <div id="navbar">
-            <div class="navbar_item">
+            <a href="index.html" class="navbar_item">
                 <div class="navbar_show_part">
                     <span class="navbar_icon material-symbols-outlined">
                         home
@@ -34,9 +34,9 @@
                 <div class="navber_hidden_part">
                     <h2 class="navbar_header">Home</h2>
                 </div>
-            </div>
+            </a>
 
-            <div class="navbar_item">
+            <a href="searcher.html" class="navbar_item">
                 <div class="navbar_show_part">
                     <span class="navbar_icon material-symbols-outlined">
                         search
@@ -45,9 +45,9 @@
                 <div class="navber_hidden_part">
                     <h2 class="navbar_header">Search</h2>
                 </div>
-            </div>
+            </a>
 
-            <div class="navbar_item">
+            <a href="rate_hummusia.html" class="navbar_item">
                 <div class="navbar_show_part">
                     <span class="navbar_icon material-symbols-outlined">
                         thumb_up
@@ -56,9 +56,9 @@
                 <div class="navber_hidden_part">
                     <h2 class="navbar_header">Rate</h2>
                 </div>
-            </div>
+            </a>
 
-            <div class="navbar_item">
+            <a href="adder.html" class="navbar_item">
                 <div class="navbar_show_part">
                     <span class="navbar_icon material-symbols-outlined">
                         add_circle
@@ -67,7 +67,7 @@
                 <div class="navber_hidden_part">
                     <h2 class="navbar_header">Home</h2>
                 </div>
-            </div>
+            </a>
         </div>
 
 
