--- a/searcher.html
+++ b/searcher.html
@@ -65,7 +65,7 @@
                     </span>
                 </div>
                 <div class="navber_hidden_part">
-                    <h2 class="navbar_header">Home</h2>
+                    <h2 class="navbar_header">Add</h2>
                 </div>
             </a>
         </div>
