commit before push

--- a/adder.html
+++ b/adder.html
@@ -82,29 +82,31 @@
 
                         <form action="#" class="add_hummusia_form">
                             <div class="special_input_container">
-                                <input type="text" class="special_input" placeholder="Hummusia Name">
-                                <label class="special_input_label" for="rate">Hummusia Name</label>
+                                <input id="add_humusia_name_input" type="text" class="special_input"
+                                    placeholder="Hummusia Name">
+                                <label class="special_input_label" for="add_humusia_name_input">Hummusia Name</label>
                             </div>
 
                             <div class="special_input_container">
-                                <input type="text" class="special_input" id="city_input" placeholder="Hummusia City">
-                                <label class="special_input_label" for="rate">Hummusia City</label>
+                                <input id="add_humusia_city_input" type="text" class="special_input" id="city_input"
+                                    placeholder="Hummusia City">
+                                <label class="special_input_label" for="add_humusia_city_input">Hummusia City</label>
                             </div>
 
                             <div class="adder_input_container">
-                                <label for="kosher">Choose if Kosher:</label>
-                                <select name="kosher" id="kosher">
+                                <label for="add_humusia_kosher_input">Choose if Kosher:</label>
+                                <select name="kosher" id="add_humusia_kosher_input">
                                     <option value="true">true</option>
                                     <option value="false">false</option>
                                 </select><br><br>
                             </div>
 
                             <div class="adder_input_container">
-                                <label for="open">Choose opening hours:</label>
+                                <label for="add_humusia_open_input">Choose opening hours:</label>
 
-                                <input type="time" id="open"></input>
+                                <input type="time" id="add_humusia_open_input"></input>
                                 <label>-</label>
-                                <input type="time" id="close"></input>
+                                <input type="time" id="add_humusia_close_input"></input>
                             </div>
 
                             <button class="regular_button">Add now!</button>
