--- a/rate_hummusia.html
+++ b/rate_hummusia.html
@@ -59,7 +59,7 @@
                     </span>
                 </div>
                 <div class="navber_hidden_part">
-                    <h2 class="navbar_header">Home</h2>
+                    <h2 class="navbar_header">Add</h2>
                 </div>
             </a>
         </div>
@@ -78,14 +78,15 @@
                     </div>
                     <form action="#" class="rate_hummusia_form">
                         <div class="special_input_container">
-                            <input type="text" class="special_input" placeholder="Hummusia Name">
+                            <input type="text" class="special_input" id="rating_name_input" placeholder="Hummusia Name">
                             <label class="special_input_label" for="rate">Hummusia Name</label>
                         </div>
 
 
 
                         <div class="special_input_container">
-                            <input type="number" max='5' min="0" class="special_input" placeholder="Rating">
+                            <input type="number" max='5' min="0" id="rating_number_input" class="special_input"
+                                placeholder="Rating">
                             <label class="special_input_label" for="rate">Choose rate</label>
                         </div>
                         <button class="regular_button">Rate now!</button>
