--- a/searcher.html
+++ b/searcher.html
@@ -24,6 +24,8 @@
 <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 
+<script type="text/javascript" src="scripts/click_functions.js"></script>
+
 <body>
     <page class="page">
         <div id="navbar">
@@ -111,7 +113,7 @@
                         <label for="rate">Choose minimum rate:</label>
                         <input max="5" id="min_rate_input" class="regular_input" type="number"><br><br>
                     </div>
-                    <button class="regular_button">Search</button>
+                    <button class="regular_button" id="search">Search</button>
                 </div>
 
 
