--- a/rate_hummusia.html
+++ b/rate_hummusia.html
@@ -89,7 +89,7 @@
                                 placeholder="Rating">
                             <label class="special_input_label" for="rate">Choose rate</label>
                         </div>
-                        <button class="regular_button">Rate now!</button>
+                        <button class="regular_button" id="rate">Rate now!</button>
 
                     </form>
                 </div>
