Build the 'add humusia' request.

--- a/adder.html
+++ b/adder.html
@@ -119,6 +119,7 @@
         </main>
     </page>
 
+    <script src="scripts/consts.js"></script>
     <script src="scripts/hummus_api.js"></script>
     <script src="scripts/hummusia_adder.js"></script>
     <script src="scripts/hummusiot_displayer.js"></script>
