--- a/searcher.html
+++ b/searcher.html
@@ -24,8 +24,6 @@
 <link rel="stylesheet"
     href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@48,400,0,0" />
 
-<script type="text/javascript" src="scripts/click_functions.js"></script>
-
 <body>
     <page class="page">
         <div id="navbar">
@@ -311,6 +309,11 @@
             </section>
         </main>
     </page>
+    <script src="scripts/consts.js"></script>
+    <script src="scripts/hummus_api.js"></script>
+    <script src="scripts/hummusiot_displayer.js"></script>
+    <script src="scripts/hummusiot_searcher.js"></script>
+    
 
 </body>
 
