Add the option to search for hummusiot from the ui.

--- a/searcher.html
+++ b/searcher.html
@@ -85,9 +85,8 @@
                     <div>
                         <label for="filters">Choose filter:</label>
                         <select id="filters">
-                            <option value="Name">Name</option>
-                            <option value="City">City</option>
-                            <option value="Kosher">Kosher</option>
+                            <option value="name">Name</option>
+                            <option value="city">City</option>
                         </select>
                         <input placeholder="Filter value" id="filters_value" required class="regular_input"
                             type="text"><br><br>
@@ -95,8 +94,8 @@
                     <div>
                         <label for="price">Choose Price:</label>
                         <select name="price" id="price">
-                            <option value="cheap">cheap</option>
                             <option value="medium">medium</option>
+                            <option value="cheap">cheap</option>
                             <option value="Expensive">Expensive</option>
                         </select><br><br>
                     </div>
@@ -313,7 +312,7 @@
     <script src="scripts/hummus_api.js"></script>
     <script src="scripts/hummusiot_displayer.js"></script>
     <script src="scripts/hummusiot_searcher.js"></script>
-    
+
 
 </body>
 
